Mon May  6 09:33:00 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/TLI_Acceptor.cpp:
	* ace/TLI_Stream.i:
	* ace/TLI_Connector.cpp:

	  Added include of ACE.h.

	* ace/Handle_Set.i:

	  Added include of ace_string.h since FD_ZERO seems to use memset on
	  suns.

	* ace/Sched_Params.cpp:

	  Added include of OS_String.h if ACE_HAS_PRIOCNTL && ACE_HAS_STHREADS 
	  are defined.
	
	* ace/ace_stdio.h:
	* ace/ace_limits.h:

	  Moved L_cuserid definition from ace_limits.h to ace_stdio.h; moved
	  IOV_MAX definition form ace_stdio.h to ace_limits.h.
	
	* ace/ace_sys_types.h:
	* ace/ace_signal.h:
	* ace/Object_Manager_Base.h:

	  Moved sigset_t typedef from ace_sys_types.h to ace_signal.h, and included
	  ace_signal.h in Object_Manager_Base.h to pick up the type.

Sat May  4 22:35:23 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/OS.i (sema_destroy):

	  Fixed an ifdef error introduced when PACE was removed.

Sat May  4 18:50:25 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: 

	  Added Object_Manager_Base.cpp to project files.

Fri May  3 08:20:53 UTC 2002  Don Hinton  <dhinton@ieee.org>
	
	* ace/ace_threads.h:
	* ace/ace_sys_socket.h:

	  Moved some socket specific includes from ace_threads.h to
	  ace_sys_socket.h, where they belong.  Hopefully this will
	  clear up some of the problems on the sun.

Thu May  2 18:31:31 UTC 2002  Don Hinton  <dhinton@ieee.org>
	
	* ace/ace_limits.h: Added ace_sys_param.h before definition of MAXNAMELEN.

	* ace/ace_stropts.h: Always include stropts.h if ACE_LACKS_STROPTS_H is
	  not defined.

Thu May  2 15:51:17 UTC 2002  Don Hinton  <dhinton@ieee.org>
	
	* ace/Unbounded_Set.cpp:  Added OS_Errno.h and Trace.h.

	* ace/Dump_T.cpp:  
	* ace/Event_Handler_T.i: 

	  Added Trace.h.

	* examples/Mem_Map/file-reverse.cpp: 
	* examples/Misc/test_set.cpp:

	  Added Main_Macros.h.

	* examples/Reactor/Multicast/Log_Wrapper.cpp: 
	* examples/System_V_IPC/SV_Message_Queues/test.h: 
