@@ -9,6 +9,7 @@
 # include "tao/CORBA_String.inl"
 #endif /* ! __ACE_INLINE__ */
 
+#include "ace/OS.h"
 
 ACE_RCSID(tao, CORBA_String, "$Id$")
 
