@@ -16,6 +16,7 @@
 
 #include "corbafwd.h"
 #include "ace/Array_Base.h"
+#include "ace/Object_Manager_Base.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
