@@ -28,6 +28,8 @@
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+#include "ace/ace_stdio.h"
+
 class TAO_ORB_Core;
 
 /**
