@@ -16,6 +16,7 @@
 
 #include "corbafwd.h"
 #include "LF_Event.h"
+#include "ace/ace_sys_uio.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
