@@ -10,6 +10,8 @@
 #include "tao/Sequence_T.i"
 #endif /* __ACE_INLINE__ */
 
+#include "ace/OS_Errno.h"
+
 ACE_RCSID (tao, 
            Sequence_T, 
            "$Id$")
