@@ -20,6 +20,7 @@
 #include "ace/pre.h"
 
 #include "ace/Synch.h"
+#include "ace/Object_Manager_Base.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
