@@ -19,6 +19,7 @@
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
 #include "tao/corbafwd.h"
+#include "ace/Synch_T.h"
 
 class TAO_ORB_Core;
 class TAO_Acceptor_Registry;
